# CodeFactory

./: .gitignore  LICENSE  MANIFEST.in  Makefile  Readme.md  autotest.py  codef  setup.py
codefactory/: __init__.py  codef.py  template.py  toolchains.py  utils.py
doc/: 设计方案.md
templates/CPPTemplate/: .gitignore  .travis.yml  CMakeLists.txt  appveyor.yml  conanfile.py.tj
templates/CPPTemplate/cmake/: Install.cmake.tj
templates/CPPTemplate/doc/: index.po
templates/CPPTemplate/src/: main.cpp
templates/CPPTemplate/test/: apptest.cpp
templates/cpp/: .travis.yml  CHANGELOG.md  CMakeLists.txt.tj  README.md.tj  appveyor.yml  conanfile.py.tj
templates/cpp/.travis/: install.sh  run.sh
templates/cpp/doc/: index.cn.md.tj
templates/cpp/doc/misc/: header.html
templates/cpp/include/: App.hpp
templates/cpp/test/: CMakeLists.txt
templates/cpplib/: .gitignore  .travis.yml  Authors  CMakeLists.txt.tj  appveyor.yml  build.py  conanfile.py.tj
templates/cpplib/.travis/: install.sh
templates/cpplib/doc/: Doxyfile.zh-cn.in  Makefile  index.po
templates/cpplib/src/: App.cpp
templates/cpplib/test/: CMakeLists.txt
templates/cpplib/test_package/: CMakeLists.txt  conanfile.py.tj  test.cpp
